--- a/index.html
+++ b/index.html
@@ -115,8 +115,15 @@
      </div>
     </div><!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-blue-900 border-t border-yellow-400">
-     <div class="px-6 py-4 space-y-3"><a href="#inicio" onclick="navigateTo('home'); event.preventDefault();" class="block text-yellow-100 hover:text-yellow-400 font-medium py-2">Inicio</a> <a href="#programa" onclick="scrollToSection('programa'); event.preventDefault();" class="block text-yellow-100 hover:text-yellow-400 font-medium py-2">Programa</a> <a href="#servicios" onclick="scrollToSection('servicios'); event.preventDefault();" class="block text-yellow-100 hover:text-yellow-400 font-medium py-2">Servicios</a> <a href="#ebooks" onclick="scrollToSection('ebooks'); event.preventDefault();" class="block text-yellow-100 hover:text-yellow-400 font-medium py-2">E-books</a> <a href="#contacto" onclick="scrollToSection('contacto'); event.preventDefault();" class="block text-yellow-100 hover:text-yellow-400 font-medium py-2">Contacto</a>
-     </div>
+     <div class="hidden md:flex items-center gap-8">
+  <a href="index.html" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">Inicio</a>
+  <a href="Blog/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">Blog</a>
+  <a href="Clases/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">Clases</a>
+  <a href="Polaco/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">Polaco</a>
+  <a href="E-books/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">E-books</a>
+  <a href="Traducciones/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">Traducciones</a>
+  <a href="FAQ/" class="nav-link text-yellow-100 hover:text-yellow-400 font-medium">FAQ</a>
+</div>
     </div>
    </nav><!-- HOME PAGE -->
    <div id="page-home" class="page active"><!-- Hero Section -->
