--- a/panel.html
+++ b/panel.html
@@ -1,14 +1,216 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <title>Panel</title>
+  <meta charset="UTF-8" />
+  <title>Panel ucznia | AquiVivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- FIXED CSS PATH -->
-  <link rel="stylesheet" href="/aquivivo/assets/css/styles.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+  <!-- ✅ spójnie jak w login/admin -->
+  <link rel="stylesheet" href="assets/css/styles.css" />
+
+  <style>
+    .panel-grid{ display:grid; grid-template-columns: 1.2fr .8fr; gap: 16px; margin-bottom: 16px; }
+    @media (max-width: 860px){ .panel-grid{ grid-template-columns: 1fr; } }
+
+    .courses-grid{ display:grid; grid-template-columns: repeat(2, 1fr); gap: 14px; margin-top: 12px; }
+    @media (max-width: 860px){ .courses-grid{ grid-template-columns: 1fr; } }
+
+    .course-card{ display:flex; flex-direction:column; gap: 10px; min-height: 140px; }
+    .course-actions{ margin-top:auto; display:flex; gap:10px; flex-wrap:wrap; }
+
+    .pill{ display:inline-flex; align-items:center; gap: 8px; padding: 8px 12px; border-radius: 999px; font-weight: 900; font-size: 12px; letter-spacing: .2px; }
+    .pill-ok{ background: rgba(252, 209, 22, .22); border: 1px solid rgba(252, 209, 22, .45); color: #111827; }
+    .pill-lock{ background: rgba(255,255,255,.10); border: 1px solid rgba(255,255,255,.18); color: white; backdrop-filter: blur(10px); }
+
+    .small-muted{ margin: 0; font-size: 13px; color: #6b7280; line-height:1.35; }
+
+    .glass-card{ background: rgba(255,255,255,.10); color:white; border: 1px solid rgba(255,255,255,.18); backdrop-filter: blur(12px); }
+
+    .adminLinkWrap{ margin-top: 10px; display:none; }
+    .adminLinkWrap.show{ display:block; }
+  </style>
 </head>
+
 <body>
-  <!-- CONTENT UNCHANGED -->
-  <h1>Admin panel</h1>
+
+  <header class="nav-glass">
+    <div class="container nav-inner">
+      <div class="brand">
+        <div class="logo-flag" aria-hidden="true"></div>
+        <div class="name">Aqui vivo</div>
+      </div>
+
+      <div class="nav-actions">
+        <a class="btn-white-outline" href="index.html">Inicio</a>
+        <button class="btn-red" onclick="logout()">Wyloguj</button>
+      </div>
+    </div>
+  </header>
+
+  <main class="page">
+    <div class="container">
+
+      <section class="panel-grid">
+        <div class="hero-card">
+          <h1 class="hero-title glow-text">Panel ucznia 🎓</h1>
+          <p class="hero-subtitle">Moje kursy</p>
+
+          <div style="margin-top:12px; display:inline-flex; gap:10px; align-items:center; padding:10px 14px; border-radius:16px; background: rgba(255,255,255,.10); border: 1px solid rgba(255,255,255,.18); backdrop-filter: blur(10px);">
+            <div style="font-weight:900;">👤</div>
+            <div style="font-weight:800;">Zalogowana jako: <span id="userEmail" style="font-weight:700; opacity:.95;">...</span></div>
+          </div>
+
+          <div id="adminLinkWrap" class="adminLinkWrap">
+            <div style="margin-top:12px;">
+              <a class="btn-white-outline" href="admin.html">⚙️ Admin</a>
+            </div>
+            <p class="small-muted" style="margin-top:8px; color: rgba(255,255,255,.8);">Widoczne tylko dla admina.</p>
+          </div>
+        </div>
+
+        <div class="stats">
+          <div class="stat"><div class="big">📘</div><div class="label">Kursy</div></div>
+          <div class="stat"><div class="big">⏳</div><div class="label">Dostęp</div></div>
+          <div class="stat"><div class="big">🎓</div><div class="label">Nauka</div></div>
+        </div>
+      </section>
+
+      <div class="sectionTitle">📘 Moje kursy</div>
+      <div id="coursesCards" class="courses-grid"></div>
+
+    </div>
+  </main>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
+import { getFirestore, doc, getDoc, setDoc, serverTimestamp }
+  from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyBoa3Yf82CDW6k1FSwdeoQg-gBTjh9kVZM",
+  authDomain: "aquivivo-platform.firebaseapp.com",
+  projectId: "aquivivo-platform",
+  storageBucket: "aquivivo-platform.firebasestorage.app",
+  messagingSenderId: "116115622011",
+  appId: "1:116115622011:web:33a4a583eba4368071bade"
+};
+
+const ADMIN_EMAIL = "aquivivo.pl@gmail.com";
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+
+const userEmailEl = document.getElementById("userEmail");
+const coursesCardsEl = document.getElementById("coursesCards");
+const adminLinkWrap = document.getElementById("adminLinkWrap");
+
+function parseIso(s){
+  if(!s) return null;
+  const d = new Date(s);
+  return isNaN(d.getTime()) ? null : d;
+}
+
+function hasAccess(accessObj, level){
+  if (!accessObj || !accessObj[level] || !accessObj[level].freeUntil) return false;
+  const exp = parseIso(accessObj[level].freeUntil);
+  if(!exp) return false;
+  return exp > new Date();
+}
+
+function renderCourseCards(accessObj){
+  coursesCardsEl.innerHTML = "";
+  const levels = ["A1","A2","B1","B2"];
+
+  function activeCard(lvl){
+    return `
+      <div class="card course-card">
+        <div style="display:flex; align-items:center; justify-content:space-between; gap:10px;">
+          <div class="pill pill-ok">✅ dostęp aktywny</div>
+          <div style="font-weight:900; opacity:.9;">PL ${lvl}</div>
+        </div>
+
+        <div style="font-size:20px; font-weight:900; margin-top:4px;">Polski ${lvl}</div>
+        <p class="small-muted">Kliknij i przejdź do kursu.</p>
+
+        <div class="course-actions">
+          <!-- ✅ kurs w /kursy -->
+          <a class="btn-yellow" href="kursy/course.html?level=${encodeURIComponent(lvl)}">Wejdź →</a>
+        </div>
+      </div>
+    `;
+  }
+
+  function lockedCard(lvl){
+    return `
+      <div class="card course-card glass-card">
+        <div style="display:flex; align-items:center; justify-content:space-between; gap:10px;">
+          <div class="pill pill-lock">🔒 zablokowany</div>
+          <div style="font-weight:900; opacity:.9;">PL ${lvl}</div>
+        </div>
+
+        <div style="font-size:20px; font-weight:900; margin-top:4px;">Polski ${lvl}</div>
+        <p style="margin:0; font-size:13px; opacity:.9;">Wkrótce / do aktywacji.</p>
+
+        <div class="course-actions">
+          <a class="btn-white-outline" href="Contacto.html">Aktywuj</a>
+        </div>
+      </div>
+    `;
+  }
+
+  levels.forEach(lvl => {
+    const active = hasAccess(accessObj, lvl);
+    coursesCardsEl.innerHTML += active ? activeCard(lvl) : lockedCard(lvl);
+  });
+}
+
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+    return;
+  }
+
+  userEmailEl.textContent = user.email || "(brak email)";
+
+  // pokaż link adminowi (jeśli email admina)
+  if ((user.email || "").toLowerCase() === ADMIN_EMAIL.toLowerCase()){
+    adminLinkWrap.classList.add("show");
+  }
+
+  const ref = doc(db, "users", user.uid);
+  let snap = await getDoc(ref);
+
+  // jeśli user nie istnieje w kolekcji users -> ustaw trial A1 = 7 dni
+  if (!snap.exists()) {
+    const now = new Date();
+    const trialEnd = new Date();
+    trialEnd.setDate(now.getDate() + 7);
+
+    await setDoc(ref, {
+      email: user.email || null,
+      createdAt: serverTimestamp(),
+      access: {
+        A1: { freeUntil: trialEnd.toISOString() },
+        A2: null,
+        B1: null,
+        B2: null
+      }
+    });
+
+    snap = await getDoc(ref);
+  }
+
+  const data = snap.data();
+  renderCourseCards(data?.access || {});
+});
+
+window.logout = function() {
+  signOut(auth).then(() => window.location.href = "login.html");
+};
+</script>
+
 </body>
 </html>
