--- a/ESprograma.html
+++ b/ESprograma.html
@@ -273,6 +273,9 @@
  </head>
  <body class="h-full" style="background: linear-gradient(180deg, #001a4d 0%, #003893 50%, #001a4d 100%);">
   <div id="app" class="h-full overflow-auto">
+   <div class="sessionBar bg-yellow-400 text-blue-900 py-2 text-center font-bold text-xs tracking-wider">
+    Sesión activa: <span id="sessionEmail">Cargando...</span>
+   </div>
    <div class="max-w-4xl mx-auto px-4 py-8"><!-- Header -->
     <header class="text-center mb-8 mt-8">
      <h1 id="main-title" class="font-display text-5xl font-bold mb-2 glow-text" style="color: var(--yellow-main);">Polaco</h1>
