--- a/Blog.html
+++ b/Blog.html
@@ -312,6 +312,9 @@
      </div>
     </div>
    </nav><!-- Hero Section -->
+   <div class="sessionBar bg-yellow-400 text-blue-900 py-2 text-center font-bold text-xs tracking-wider">
+    Sesión activa: <span id="sessionEmail">Cargando...</span>
+   </div>
    <section id="inicio" class="min-h-screen flex items-center pt-24 pb-12 px-6 relative overflow-hidden">
     <div class="absolute top-20 right-10 w-96 h-96 bg-yellow-400 rounded-full opacity-10 blur-3xl"></div>
     <div class="absolute bottom-20 left-10 w-80 h-80 bg-red-600 rounded-full opacity-10 blur-3xl"></div>
