--- a/Traducciones.html
+++ b/Traducciones.html
@@ -864,12 +864,16 @@
        </ul>
       </div>
      </div>
-     <div class="border-t border-blue-700 pt-6 flex flex-col md:flex-row justify-between items-center gap-4">
-      <p class="text-blue-200 text-sm">© 2026 Aqui vivo. Todos los derechos reservados.</p>
-      <p class="text-blue-200 text-sm">Hecho con <span class="text-red-500">❤️</span> en Poznań, Polonia</p>
-     </div>
+      <li><span class="block text-blue-200 text-[10px] mt-0.5">Hecho con <span class="text-red-500">❤️</span> en Poznań, Polonia</span></li>
+     </ul>
     </div>
-   </footer>
+   </div>
+   <div class="mt-0.5">
+     <p class="text-blue-200 text-[10px]">© 2026 Aqui vivo. Todos los derechos reservados.</p>
+     <p class="text-blue-200 text-[10px]">Profesora de español y polaco en Let's Talk Poznań. Te ayudo a dejar de tener miedo a hablar 🌸🤍</p>
+   </div>
+  </div>
+ </footer>
   </div>
   <script>
     const contactForm = document.getElementById('contact-form');
