--- a/plzajecia.html
+++ b/plzajecia.html
@@ -819,12 +819,12 @@
      </div>
     </div>
    </section><!-- Footer -->
-   <footer class="nav-glass text-white py-8 border-t-2 border-yellow-400">
+   <footer class="nav-glass text-white py-2 border-t-2 border-yellow-400 fixed bottom-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-6">
-     <div class="grid md:grid-cols-4 gap-8 mb-8">
-      <div class="space-y-4">
-       <div class="flex items-center gap-3">
-        <svg class="w-10 h-10 drop-shadow-lg" viewbox="0 0 300 320" xmlns="http://www.w3.org/2000/svg"><defs>
+     <div class="grid md:grid-cols-4 gap-2 mb-2">
+      <div class="space-y-1">
+       <div class="flex items-center gap-2">
+        <svg class="w-8 h-8 drop-shadow-lg" viewbox="0 0 300 320" xmlns="http://www.w3.org/2000/svg"><defs>
           <lineargradient id="colombiaFlagFooter" x1="0%" y1="0%" x2="0%" y2="100%">
            <stop offset="0%" style="stop-color:#FCD116;stop-opacity:1" />
            <stop offset="50%" style="stop-color:#FCD116;stop-opacity:1" />
@@ -834,13 +834,16 @@
            <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
           </lineargradient>
          </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
-        </svg><span class="font-display text-xl font-black text-yellow-400">Aqui vivo</span>
+        </svg><span class="font-display text-base font-black text-yellow-400">Aqui vivo</span>
        </div>
-       <p class="text-blue-200 text-sm leading-relaxed">Nauczycielka hiszpańskiego i polskiego w Let's Talk Poznań. Pomogę Ci przestać bać się mówić 🌸🤍</p>
+       <p class="text-blue-200 text-xs leading-relaxed">Nauczycielka hiszpańskiego i polskiego w Let's Talk Poznań. Pomogę Ci przestać bać się mówić 🌸🤍</p>
       </div>
       <div>
-       <h4 class="font-bold mb-4 text-yellow-400">Usługi</h4>
-       <ul class="space-y-2 text-blue-200 text-sm">
+       <h4 class="font-bold mb-2 text-yellow-400 text-base">Usługi</h4>
+       <ul class="space-y-1 text-blue-200 text-xs">
+     <div class="border-t border-blue-700 pt-2 flex flex-col md:flex-row justify-between items-center gap-2">
+      <p class="text-blue-200 text-xs">© 2026 Aqui vivo. Wszelkie prawa zastrzeżone.</p>
+      <p class="text-blue-200 text-xs">Stworzone z <span class="text-red-500">❤️</span> w Poznaniu, Polska</p>
         <li><a href="https://aquivivo.github.io/aquivivo/plpolski.html" class="hover:text-yellow-400 transition-colors">Kurs Polskiego</a></li>
         <li><a href="https://aquivivo.github.io/aquivivo/plpomoc.html" class="hover:text-yellow-400 transition-colors">Pomoc z Formalnościami</a></li>
         <li><a href="https://aquivivo.github.io/aquivivo/pltlumaczenie.html" class="hover:text-yellow-400 transition-colors">Tłumaczenia</a></li>
